# poly2

./: .gitignore  Cargo.toml  README.md  plan.md  unbantu.md
config/: default.yaml
data/: btc_candle_rounds.jsonl  plan_b_rounds.jsonl  plan_c_history.csv  plan_c_rounds.jsonl  plan_c_state.json  positions.json
docs/: DEPLOY-UBUNTU.md  how2select_trader.md  improvement-roadmap.md  pilot-14d-checklist.md  plan-c-leaderboard-upgrade.md  plan-c-review-after.md  profitability-feasibility.md  project-status.md  rust-trading-architecture.md
docs/templates/: daily-profit-report.csv
examples/: event_stream.rs  plan_c_ic_backtest.rs  rtds_price_check.rs  verify_price_to_beat.rs
scripts/: generate_daily_profit_report.py
src/: config.rs  engine.rs  execution.rs  healthcheck.rs  lib.rs  main.rs  persistence.rs  plan_a.rs  plan_b.rs  plan_c.rs  plan_c_redeem.rs  position.rs  risk.rs  runner.rs  types.rs
src/strategy/: arbitrage.rs  mod.rs  registry.rs  todo.rs
tests/: config_tests.rs  position_tests.rs  runner_tests.rs  strategy_tests.rs
